--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1009381720%3Fsecret_token%3Ds-eMN2poTzhyI&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"
             ></iframe>
           </div> </div><div class="section">
-          <h2 class="title">BBC Radio 1, BBC Sounds &amp; iPlayer</h2>
+          <h2 class="title">BBC Radio 1</h2>
           <h4>Virgil Abloh x Benji B</h4>
           <p>June 2019 - Studio Manager/ Producer</p>
           <p class="body">
